--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.14.6",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-mui": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.5",
     "postcss-url": "^10.1.3",
     "react": "^18.2.0",
@@ -26,6 +28,7 @@
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
+    "@splidejs/react-splide": "^0.7.12",
     "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^9.1.3",
@@ -36,6 +39,7 @@
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.1",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.15.0",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "url-loader": "^4.1.1",
