--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production",
+    "client": "npm start --prefix client",
+    "server": "node ./backend/server.js",
+    "project": "concurrently \"npm run server\" \"npm run start\""
   },
   "keywords": [],
   "author": "",
@@ -14,15 +17,32 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.6",
+    "@mui/joy": "^5.0.0-beta.4",
     "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.14.6",
+    "@prisma/client": "^5.2.0",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@react-buddy/palette-mui": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "firebase": "^10.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.0",
     "postcss-url": "^10.1.3",
+    "prisma": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.11"
+    "react-loadable": "^5.5.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.11",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
@@ -32,12 +52,16 @@
     "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^9.1.3",
+    "concurrently": "^5.3.0",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.28",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.1",
+    "prisma": "^5.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "style-loader": "^3.3.3",
